--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>openSCADpm</title>
-      <meta charset="utf-8">
+
       <meta name="description" content="Traveling HTML5 Template" />
       <meta name="author" content="Design Hooks" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -92,333 +92,6 @@
             </div>
          </section>
 
-         <!-- Destinations Section -->
-         <section class="section section-destination">
-            <!-- Title -->
-            <div class="section-title">
-               <div class="container">
-                  <h2 class="title">Explore our top destinations</h2>
-                  <p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-               </div>
-            </div>
-
-            <!-- Content -->
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-16 col-xs-24">
-                     <div class="destination-box">
-                        <div class="box-cover">
-                           <a href="#">
-                              <img src="img/destination-1.jpg" alt="destination image" />
-                           </a>
-                        </div>
-
-                        <span class="boats-qty">730</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="city">Figueira da Fox</h4>
-                              <p class="country">Portugal</p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-md-8 col-sm-12 col-xs-24">
-                     <div class="destination-box">
-                        <div class="box-cover">
-                           <a href="#">
-                              <img src="img/destination-2.jpg" alt="destination image" />
-                           </a>
-                        </div>
-
-                        <span class="boats-qty">621</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="city">Ibiza</h4>
-                              <p class="country">Spain</p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-md-8 col-sm-12 col-xs-24">
-                     <div class="destination-box">
-                        <div class="box-cover">
-                           <a href="#">
-                              <img src="img/destination-3.jpg" alt="destination image" />
-                           </a>
-                        </div>
-
-                        <span class="boats-qty">543</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="city">Palma de Mallorca</h4>
-                              <p class="country">Spain</p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-md-8 col-sm-12 col-xs-24">
-                     <div class="destination-box">
-                        <div class="box-cover">
-                           <a href="#">
-                              <img src="img/destination-4.jpg" alt="destination image" />
-                           </a>
-                        </div>
-
-                        <span class="boats-qty">495</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="city">Portofino</h4>
-                              <p class="country">Italy</p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-md-8 col-sm-12 col-xs-24">
-                     <div class="destination-box">
-                        <div class="box-cover">
-                           <a href="#">
-                              <img src="img/destination-5.jpg" alt="destination image" />
-                           </a>
-                        </div>
-
-                        <span class="boats-qty">402</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="city">Port Hercules</h4>
-                              <p class="country">Monaco</p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="load-destinations-box">
-                     <div class="col-md-8 col-sm-12 col-xs-24">
-                        <div class="destination-box">
-                           <div class="box-cover">
-                              <a href="#">
-                                 <img src="img/destination-4.jpg" alt="destination image" />
-                              </a>
-                           </div>
-
-                           <span class="boats-qty">495</span>
-
-                           <div class="box-details">
-                              <div class="box-meta">
-                                 <h4 class="city">Portofino</h4>
-                                 <p class="country">Italy</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-
-                     <div class="col-md-8 col-sm-12 col-xs-24">
-                        <div class="destination-box">
-                           <div class="box-cover">
-                              <a href="#">
-                                 <img src="img/destination-5.jpg" alt="destination image" />
-                              </a>
-                           </div>
-
-                           <span class="boats-qty">402</span>
-
-                           <div class="box-details">
-                              <div class="box-meta">
-                                 <h4 class="city">Port Hercules</h4>
-                                 <p class="country">Monaco</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-
-                     <div class="col-md-8 col-sm-12 col-xs-24">
-                        <div class="destination-box">
-                           <div class="box-cover">
-                              <a href="#">
-                                 <img src="img/destination-3.jpg" alt="destination image" />
-                              </a>
-                           </div>
-
-                           <span class="boats-qty">543</span>
-
-                           <div class="box-details">
-                              <div class="box-meta">
-                                 <h4 class="city">Palma de Mallorca</h4>
-                                 <p class="country">Spain</p>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-
-               <div class="align-center">
-                  <a href="#" class="btn btn-default btn-load-destination"><span class="text">Explore more destinations</span><i class="icon-spinner6"></i></a>
-               </div>
-            </div>
-         </section>
-
-         <!-- Parallax Box -->
-         <div class="parallax-box">
-            <div class="container">
-               <div class="text align-center">
-                  <h1>Have your own boat?</h1>
-                  <p>navigare necesse est, vivere non est necesse</p>
-
-                  <a href="#" class="btn btn-special no-icon size-2x">Rent your boat</a>
-               </div>
-            </div>
-         </div>
-
-         <!-- Boats Section -->
-         <section class="section section-boats">
-            <!-- Title -->
-            <div class="section-title">
-               <div class="container">
-                  <h2 class="title">Featured boats</h2>
-                  <p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-               </div>
-            </div>
-
-            <!-- Content -->
-            <div class="container">
-               <div class="row">
-                  <div class="col-sm-12 col-xs-24">
-                     <div class="boat-box">
-                        <div class="box-cover">
-                           <img src="img/boat-1.jpg" alt="destination image" />
-                        </div>
-
-                        <span class="boat-price">€580 / day</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="boat-name">Delphia 47</h4>
-                              <ul class="clean-list boat-meta">
-                                 <li class="location">Gdansk, Poland</li>
-                                 <li class="berths">8 Berths</li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-sm-12 col-xs-24">
-                     <div class="boat-box">
-                        <div class="box-cover">
-                           <img src="img/boat-2.jpg" alt="destination image" />
-                        </div>
-
-                        <span class="boat-price">€950 / day</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="boat-name">Sense 55</h4>
-                              <ul class="clean-list boat-meta">
-                                 <li class="location">Portofino, Itali</li>
-                                 <li class="berths">12 Berths</li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-sm-12 col-xs-24">
-                     <div class="boat-box">
-                        <div class="box-cover">
-                           <img src="img/boat-3.jpg" alt="destination image" />
-                        </div>
-
-                        <span class="boat-price">€820 / day</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="boat-name">Cruiser 51</h4>
-                              <ul class="clean-list boat-meta">
-                                 <li class="location">Palma de Mallorca, Spain</li>
-                                 <li class="berths">10 Berths</li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="col-sm-12 col-xs-24">
-                     <div class="boat-box">
-                        <div class="box-cover">
-                           <img src="img/boat-4.jpg" alt="destination image" />
-                        </div>
-
-                        <span class="boat-price">€400 / day</span>
-
-                        <div class="box-details">
-                           <div class="box-meta">
-                              <h4 class="boat-name">Cruiser 41S</h4>
-                              <ul class="clean-list boat-meta">
-                                 <li class="location">Lisbon, Portugal</li>
-                                 <li class="berths">8 Berths</li>
-                              </ul>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-
-                  <div class="load-boats-box">
-                     <div class="col-sm-12 col-xs-24">
-                        <div class="boat-box">
-                           <div class="box-cover">
-                              <img src="img/boat-2.jpg" alt="destination image" />
-                           </div>
-
-                           <span class="boat-price">€950 / day</span>
-
-                           <div class="box-details">
-                              <div class="box-meta">
-                                 <h4 class="boat-name">Sense 55</h4>
-                                 <ul class="clean-list boat-meta">
-                                    <li class="location">Portofino, Itali</li>
-                                    <li class="berths">12 Berths</li>
-                                 </ul>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-
-                     <div class="col-sm-12 col-xs-24">
-                        <div class="boat-box">
-                           <div class="box-cover">
-                              <img src="img/boat-1.jpg" alt="destination image" />
-                           </div>
-
-                           <span class="boat-price">€580 / day</span>
-
-                           <div class="box-details">
-                              <div class="box-meta">
-                                 <h4 class="boat-name">Delphia 47</h4>
-                                 <ul class="clean-list boat-meta">
-                                    <li class="location">Gdansk, Poland</li>
-                                    <li class="berths">8 Berths</li>
-                                 </ul>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-
-               <div class="align-center">
-                  <a href="#" class="btn btn-default btn-load-boats"><span class="text">Load more boats</span><i class="icon-spinner6"></i></a>
-               </div>
-            </div>
-         </section>
       </div>
 
       <!-- Footer -->
@@ -427,7 +100,7 @@
             <div class="row">
                <div class="col-md-5">
                   <div class="widget widget_links">
-                     <h5 class="widget-title">Top Locations</h5>
+                     <h5 class="widget-title">Top Packages</h5>
                      <ul>
                         <li><a href="#">Lorem impsum dolor</a></li>
                         <li><a href="#">Sit amet consectetur</a></li>
@@ -440,12 +113,12 @@
 
                <div class="col-md-5">
                   <div class="widget widget_links">
-                     <h5 class="widget-title">Featured Boats</h5>
+                     <h5 class="widget-title">OpenSCAD</h5>
                      <ul>
-                        <li><a href="#">Lorem impsum dolor</a></li>
-                        <li><a href="#">Sit amet consectetur</a></li>
-                        <li><a href="#">Adipisicing elit</a></li>
-                        <li><a href="#">Eiusmod tempor</a></li>
+                        <li><a href="https://github.com/openscad/openscad/">GitHub</a></li>
+                        <li><a href="http://www.openscad.org/documentation.html">Documentation</a></li>
+                        <li><a href="http://www.openscad.org/gallery.html">Gallery</a></li>
+                        <li><a href="http://www.openscad.org/downloads.html">Downloads</a></li>
                      </ul>
                   </div>
                </div>
@@ -478,11 +151,9 @@
                   <div class="widget widget_links">
                      <h5 class="widget-title">Contact us</h5>
                      <ul>
-                        <li><a href="#">Lorem impsum dolor</a></li>
-                        <li><a href="#">Sit amet consectetur</a></li>
-                        <li><a href="#">Adipisicing elit</a></li>
-                        <li><a href="#">Eiusmod tempor</a></li>
-                        <li><a href="#">incididunt ut labore</a></li>
+                        <li><a href="#">Stan Peceny (skp2140@columbia.edu)</a></li>
+                        <li><a href="#">Jiaxin Su (js4722@columbia.edu)</a></li>
+                        <li><a href="#">Brennan Wallace (bgw2119@columbia.edu)</a></li>
                      </ul>
                   </div>
                </div>
