--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
                         <a href="#">OpenSCADpm</a>
                      </li>
                      <li>
+                        <a href="#">Tutorial</a>
+                     </li>
+                     <li>
+                        <a href="#">Documentation</a>
+                     </li>
+                     <li>
                         <a href="#">Support</a>
                      </li>
                   </ul>
 
-                  <a href="#" class="btn btn-outlined">Sign up</a>
                </nav>
             </div>
          </div>
@@ -67,26 +72,26 @@
             </div>
 
             <!-- Statistics Box -->
+
             <div class="container">
+                <div class="hero-text align-center">
+                    <p><b>Most Popular Categories</b></p>
+                </div>
                <div class="statistics-box">
                   <div class="statistics-item">
-                     <span class="value">2,300</span>
-                     <p class="title">Destinations</p>
+                     <span class="value"><a href="#">Geometry</a></span>
                   </div>
 
                   <div class="statistics-item">
-                     <span class="value">1,000</span>
-                     <p class="title">Cities</p>
+                     <span class="value"><a href="#">Buildings</a></span>
                   </div>
 
                   <div class="statistics-item">
-                     <span class="value">35,000</span>
-                     <p class="title">Boats</p>
+                     <span class="value"><a href="#">Products</a></span>
                   </div>
 
                   <div class="statistics-item">
-                     <span class="value">50,000</span>
-                     <p class="title">Sailors</p>
+                     <span class="value"><a href="#">Gear</a></span>
                   </div>
                </div>
             </div>
@@ -102,11 +107,11 @@
                   <div class="widget widget_links">
                      <h5 class="widget-title">Top Packages</h5>
                      <ul>
-                        <li><a href="#">Lorem impsum dolor</a></li>
-                        <li><a href="#">Sit amet consectetur</a></li>
-                        <li><a href="#">Adipisicing elit</a></li>
-                        <li><a href="#">Eiusmod tempor</a></li>
-                        <li><a href="#">incididunt ut labore</a></li>
+                        <li><a href="https://github.com/jiaxinsu2016/ospm_tree">ospm_tree</a></li>
+                        <li><a href="https://github.com/jiaxinsu2016/ospm_star">ospm_star</a></li>
+                        <li><a href="https://github.com/jiaxinsu2016/ospm_empty_center_cube">ospm_empty_center_cube</a></li>
+                        <li><a href="https://github.com/jiaxinsu2016/ospm_pavilion">ospm_pavilion</a></li>
+                        <li><a href="https://github.com/jiaxinsu2016/ospm_dice">ospm_dice</a></li>
                      </ul>
                   </div>
                </div>
@@ -125,24 +130,10 @@
 
                <div class="col-md-9">
                   <div class="widget widget_social">
-                     <h5 class="widget-title">Subscribe to our newsletter</h5>
-                     <form class="subscribe-form">
-                        <div class="input-line">
-                           <input type="text" name="subscribe-email" value="" placeholder="Your email address" />
-                        </div>
-                        <button type="button" name="subscribe-submit" class="btn btn-special no-icon">Subscribe</button>
-                     </form>
-
-                     <ul class="clean-list social-block">
-                        <li>
-                           <a href="#"><i class="icon-facebook"></i></a>
-                        </li>
-                        <li>
-                           <a href="#"><i class="icon-twitter"></i></a>
-                        </li>
-                        <li>
-                           <a href="#"><i class="icon-google-plus"></i></a>
-                        </li>
+                     <h5 class="widget-title">Learn OpenSCADpm</h5>
+                     <ul>
+                        <li><a href="#">Tutorial</a></li>
+                        <li><a href="#">Documentation</a></li>
                      </ul>
                   </div>
                </div>
