--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                         <input type="text" name="destination" value="" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
                         <button type="button" name="packagename-submit" class="form-submit btn btn-special">Find</button>
                      </div>
-                      </br>
+                  </form>
+                   </br></br></br></br>
+                  <form class="destinations-form">
+                      
                      <div class="input-line">
                         <input type="text" name="destination" value="" class="form-input check-value" placeholder="WHAT TYPE OF PACKAGE ARE YOU SEARCHING FOR?" />
-                        <button type="button" name="packagetype-submit" class="form-submit2 btn btn-special">Find</button>
+                        <button type="button" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
                      </div>
                   </form>
                </div>
