--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>openSCADpm</title>
+      <title>openSCADpm | Home</title>
 
       <meta name="description" content="Traveling HTML5 Template" />
       <meta name="author" content="Design Hooks" />
@@ -22,22 +22,22 @@
                <nav class="site-nav">
                   <ul class="clean-list site-links">
                      <li>
-                        <a href="#">Home</a>
+                        <a href="index.html">Home</a>
                      </li>
                      <li>
-                        <a href="#">OpenSCAD</a>
+                        <a href="http://www.openscad.org/">OpenSCAD</a>
                      </li>
                      <li>
-                        <a href="#">OpenSCADpm</a>
+                        <a href="pages/OpenSCADpm.html">OpenSCADpm</a>
                      </li>
                      <li>
-                        <a href="#">Tutorial</a>
+                        <a href="pages/Tutorial.html">Tutorial</a>
                      </li>
                      <li>
-                        <a href="#">Documentation</a>
+                        <a href="pages/Documentation.html">Documentation</a>
                      </li>
                      <li>
-                        <a href="#">Support</a>
+                        <a href="pages/Support.html">Support</a>
                      </li>
                   </ul>
 
@@ -135,8 +135,8 @@
                   <div class="widget widget_social">
                      <h5 class="widget-title">Learn OpenSCADpm</h5>
                      <ul>
-                        <li><a href="#">Tutorial</a></li>
-                        <li><a href="#">Documentation</a></li>
+                        <li><a href="pages/Tutorial.html">Tutorial</a></li>
+                        <li><a href="pages/Documentation.html">Documentation</a></li>
                      </ul>
                   </div>
                </div>
@@ -145,9 +145,9 @@
                   <div class="widget widget_links">
                      <h5 class="widget-title">Contact us</h5>
                      <ul>
-                        <li><a href="#">Stan Peceny (skp2140@columbia.edu)</a></li>
-                        <li><a href="#">Jiaxin Su (js4722@columbia.edu)</a></li>
-                        <li><a href="#">Brennan Wallace (bgw2119@columbia.edu)</a></li>
+                        <li><a href="pages/Support.html">Stan Peceny (skp2140@columbia.edu)</a></li>
+                        <li><a href="pages/Support.html">Jiaxin Su (js4722@columbia.edu)</a></li>
+                        <li><a href="pages/Support.html">Brennan Wallace (bgw2119@columbia.edu)</a></li>
                      </ul>
                   </div>
                </div>
