--- a/pages/Tutorial.html
+++ b/pages/Tutorial.html
@@ -15,7 +15,7 @@
       <header class="main-header">
          <div class="container">
             <div class="header-content">
-               <a href="index.html">
+               <a href="../index.html">
                   <img src="../img/site-identity.png" alt="site identity" />
                </a>
 
