--- a/pages/Documentation.html
+++ b/pages/Documentation.html
@@ -59,16 +59,16 @@
 
                   <form class="destinations-form">
                      <div class="input-line">
-                        <input type="text" name="destination" value="" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
-                        <button type="button" name="packagename-submit" class="form-submit btn btn-special">Find</button>
+                        <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
+                        <button type="button" id="hit1" name="packagename-submit" class="form-submit btn btn-special">Find</button>
                      </div>
                   </form>
                    </br></br></br></br>
                   <form class="destinations-form">
                       
                      <div class="input-line">
-                        <input type="text" name="destination" value="" class="form-input check-value" placeholder="WHAT TYPE OF PACKAGE ARE YOU SEARCHING FOR?" />
-                        <button type="button" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
+                        <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT TYPE OF PACKAGE ARE YOU SEARCHING FOR?" />
+                        <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
                      </div>
                   </form>
                </div>
