Download projected on all sites

--- a/pages/OpenSCADpm.html
+++ b/pages/OpenSCADpm.html
@@ -56,6 +56,9 @@
                      <h1>About OpenSCADpm</h1>
                      <p>and build the model of your dreams!</p>
                   </div>
+                  <div class="hero-text align-center">
+                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
+                  </div>
 
                   <form class="destinations-form">
                      <div class="input-line">
@@ -78,7 +81,7 @@
 
             <div class="container">
                 <div class="hero-text align-center">
-                    <p><b>Most Popular Categories</b></p>
+                    <p><b>Popular Categories</b></p>
                 </div>
                <div class="statistics-box">
                   <div class="statistics-item">
