--- a/pages/Tutorial.html
+++ b/pages/Tutorial.html
@@ -54,7 +54,10 @@
                <div class="container">
                   <div class="hero-text align-center">
                      <h1>OpenSCADpm Tutorial</h1>
-                     <p>and build the model of your dreams!</p>
+                     <p>Learn everything you need to know about OpenSCADpm!</p>
+                  </div>
+                  <div class="hero-text align-center">
+                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
                   </div>
 
                   <form class="destinations-form">
@@ -78,7 +81,7 @@
 
             <div class="container">
                 <div class="hero-text align-center">
-                    <p><b>Most Popular Categories</b></p>
+                    <p><b>Popular Categories</b></p>
                 </div>
                <div class="statistics-box">
                   <div class="statistics-item">
