--- a/pages/Support.html
+++ b/pages/Support.html
@@ -56,7 +56,9 @@
                      <h1>OpenSCADpm Support</h1>
                      <p>and build the model of your dreams!</p>
                   </div>
-
+                  <div class="hero-text align-center">
+                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
+                  </div>
                   <form class="destinations-form">
                      <div class="input-line">
                         <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
@@ -78,7 +80,7 @@
 
             <div class="container">
                 <div class="hero-text align-center">
-                    <p><b>Most Popular Categories</b></p>
+                    <p><b>Popular Categories</b></p>
                 </div>
                <div class="statistics-box">
                   <div class="statistics-item">
