Support page created

--- a/pages/Support.html
+++ b/pages/Support.html
@@ -54,7 +54,26 @@
                <div class="container">
                   <div class="hero-text align-center">
                      <h1>OpenSCADpm Support</h1>
-                     <p>and build the model of your dreams!</p>
+                      <h3>Contact the Creators</h3>
+                      <table id="t01">
+                          <tr>
+                            <th>Name</th>
+                            <th>Email</th> 
+                          </tr>
+                          <tr>
+                            <td>Stan Peceny</td>
+                            <td>skp2140@columbia.edu</td>
+                          </tr>
+                          <tr>
+                            <td>Jiaxin Su</td>
+                            <td>js4722@columbia.edu</td>
+                          </tr>
+                          <tr>
+                            <td>Brennan Wallace</td>
+                            <td>bgw2119@columbia.edu</td>
+                          </tr>
+                      </table>
+                      </br></br>
                   </div>
                   <div class="hero-text align-center">
                       <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
