About OpenSCADpm close to done

--- a/pages/OpenSCADpm.html
+++ b/pages/OpenSCADpm.html
@@ -54,53 +54,30 @@
                <div class="container">
                   <div class="hero-text align-center">
                      <h1>About OpenSCADpm</h1>
-                     <p>and build the model of your dreams!</p>
                   </div>
+                   </br></br>
                   <div class="hero-text align-center">
                       <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
                   </div>
+                  <div class="container2">
 
-                  <form class="destinations-form">
-                     <div class="input-line">
-                        <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
-                        <button type="button" id="hit1" name="packagename-submit" class="form-submit btn btn-special">Find</button>
-                     </div>
-                  </form>
-                   </br></br></br></br>
-                  <form class="destinations-form">
-                      
-                     <div class="input-line">
-                        <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT TYPE OF PACKAGE ARE YOU SEARCHING FOR?" />
-                        <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
-                     </div>
-                  </form>
+                        <header>
+                           <h1>OpenSCAD & OpenSCADpm</h1>
+                        </header>
+
+                        <article>
+                          <h1>OpenSCAD</h1>
+                          <p>OpenSCAD is a software for creating solid 3D CAD models. It is free software and available for Linux/UNIX, Windows and Mac OS X. Unlike most free software for creating 3D models (such as Blender) it does not focus on the artistic aspects of 3D modelling but instead on the CAD aspects. Thus it might be the application you are looking for when you are planning to create 3D models of machine parts but pretty sure is not what you are looking for when you are more interested in creating computer-animated movies.</p>
+                          <p>OpenSCAD is not an interactive modeller. Instead it is something like a 3D-compiler that reads in a script file that describes the object and renders the 3D model from this script file. This gives you (the designer) full control over the modelling process and enables you to easily change any step in the modelling process or make designs that are defined by configurable parameters.</p>
+                            
+                          <h1>OpenSCADpm</h1>
+                        </article>
+ 
+                 </div>
+
                </div>
             </div>
 
-            <!-- Statistics Box -->
-
-            <div class="container">
-                <div class="hero-text align-center">
-                    <p><b>Popular Categories</b></p>
-                </div>
-               <div class="statistics-box">
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Geometry</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Buildings</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Products</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Gear</a></span>
-                  </div>
-               </div>
-            </div>
          </section>
 
       </div>
