--- a/pages/Documentation.html
+++ b/pages/Documentation.html
@@ -59,21 +59,22 @@
                   <div class="hero-text align-center">
                       <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
                   </div>
+                  <div class="container2">
 
-                  <form class="destinations-form">
-                     <div class="input-line">
-                        <input type="text" name="destination" value="" id="search1" class="form-input check-value" placeholder="WHAT IS THE NAME OF YOUR PACKAGE?" />
-                        <button type="button" id="hit1" name="packagename-submit" class="form-submit btn btn-special">Find</button>
-                     </div>
-                  </form>
-                   </br></br></br></br>
-                  <form class="destinations-form">
-                      
-                     <div class="input-line">
-                        <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT TYPE OF PACKAGE ARE YOU SEARCHING FOR?" />
-                        <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
-                     </div>
-                  </form>
+                        <header>
+                           <h1>OpenSCAD & OpenSCADpm</h1>
+                        </header>
+
+                        <article>
+                          <h1>OpenSCAD</h1>
+                            <p>Please view OpenSCAD's documentation on the following <a href="http://www.openscad.org/documentation.html"><u>webpage</u></a></p>
+                            
+                          <h1>OpenSCADpm</h1>
+                          <p>Tutorial Reference 1</p>
+                          <p>Tutorial Reference 2</p>
+                        </article>
+ 
+                 </div>
                </div>
             </div>
 
