4 Default categories for topics changed

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
                 </div>
                <div class="statistics-box">
                   <div class="statistics-item">
-                     <span class="value"><a href="#">Geometry</a></span>
+                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Ageometry&type=Repositories">Geometry</a></span>
                   </div>
 
                   <div class="statistics-item">
-                     <span class="value"><a href="#">Buildings</a></span>
+                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Aarchitecture&type=Repositories">Architecture</a></span>
                   </div>
 
                   <div class="statistics-item">
-                     <span class="value"><a href="#">Products</a></span>
+                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Amechanical&type=Repositories">Mechanical</a></span>
                   </div>
 
                   <div class="statistics-item">
-                     <span class="value"><a href="#">Gear</a></span>
+                     <span class="value"><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm+topic%3Aartistic&type=Repositories">Artistic</a></span>
                   </div>
                </div>
             </div>
