--- a/pages/Tutorial.html
+++ b/pages/Tutorial.html
@@ -68,8 +68,7 @@
 
                         <article>
                           <h1>OpenSCAD</h1>
-                          <p>Tutorial Reference 1</p>
-                          <p>Tutorial Reference 2</p>
+                            <p>Please view OpenSCAD's tutorial on the following <a href="http://edutechwiki.unige.ch/en/OpenScad_beginners_tutorial"><u>webpage</u></a></p>
                             
                           <h1>OpenSCADpm</h1>
                           <p>Tutorial Reference 1</p>
@@ -81,30 +80,6 @@
                </div>
             </div>
 
-            <!-- Statistics Box -->
-
-            <div class="container">
-                <div class="hero-text align-center">
-                    <p><b>Popular Categories</b></p>
-                </div>
-               <div class="statistics-box">
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Geometry</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Buildings</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Products</a></span>
-                  </div>
-
-                  <div class="statistics-item">
-                     <span class="value"><a href="#">Gear</a></span>
-                  </div>
-               </div>
-            </div>
          </section>
 
       </div>
