Rollout in Tutorial works

--- a/pages/Tutorial.html
+++ b/pages/Tutorial.html
@@ -68,8 +68,19 @@
                             <p>Please view OpenSCAD's tutorial on the following <a href="http://edutechwiki.unige.ch/en/OpenScad_beginners_tutorial"><u>webpage</u></a></p>
                             
                           <h1>OpenSCADpm</h1>
-                          <p>Tutorial Reference 1</p>
-                          <p>Tutorial Reference 2</p>
+                          <p>Below view the Tutorial Sections</p>
+                            <dl class="accordion">
+
+                                <dt><a href=""><u>Download & Install</u></a></dt>
+                              <dd>So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.</dd>
+
+                                <dt><a href=""><u>First Steps</u></a></dt>
+                              <dd>So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.</dd>
+
+                                <dt><a href=""><u>Advanced</u></a></dt>
+                              <dd>So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.</dd>
+
+                            </dl>
                         </article>
  
                  </div>
