--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                      </div>
                   </form>
                    </br></br></br></br>
-                  <form class="destinations-form">
+                  <form id="catSearch" class="destinations-form">
                       
                      <div class="input-line">
                         <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT IS THE PACKAGE CATEGORY?" />
