Tutorial updated with Wiki

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="pages/OpenSCADpm.html">OpenSCADpm</a>
                      </li>
                      <li>
-                        <a href="pages/Tutorial.html">Tutorial</a>
+                        <a href="https://github.com/skp2140/openSCADpm/wiki/Tutorial">Tutorial</a>
                      </li>
                      <li>
                         <a href="pages/Documentation.html">Documentation</a>
@@ -139,7 +139,7 @@
                   <div class="widget widget_social">
                      <h5 class="widget-title">Learn OpenSCADpm</h5>
                      <ul>
-                        <li><a href="pages/Tutorial.html">Tutorial</a></li>
+                        <li><a href="https://github.com/skp2140/openSCADpm/wiki/Tutorial">Tutorial</a></li>
                         <li><a href="pages/Documentation.html">Documentation</a></li>
                      </ul>
                   </div>
