--- a/pages/OpenSCADpm.html
+++ b/pages/OpenSCADpm.html
@@ -31,7 +31,7 @@
                         <a href="OpenSCADpm.html">OpenSCADpm</a>
                      </li>
                      <li>
-                        <a href="Tutorial.html">Tutorial</a>
+                        <a href="https://github.com/skp2140/openSCADpm/wiki/Tutorial">Tutorial</a>
                      </li>
                      <li>
                         <a href="Documentation.html">Documentation</a>
@@ -120,7 +120,7 @@
                   <div class="widget widget_social">
                      <h5 class="widget-title">Learn OpenSCADpm</h5>
                      <ul>
-                        <li><a href="Tutorial.html">Tutorial</a></li>
+                        <li><a href="https://github.com/skp2140/openSCADpm/wiki/Tutorial">Tutorial</a></li>
                         <li><a href="Documentation.html">Documentation</a></li>
                      </ul>
                   </div>
