Documentation site update

--- a/pages/Documentation.html
+++ b/pages/Documentation.html
@@ -67,20 +67,11 @@
                           <h1>OpenSCAD</h1>
                             <p>Please view OpenSCAD's documentation on the following <a href="http://www.openscad.org/documentation.html"><u>webpage</u></a></p>
                             
-                          <h1>OpenSCADpm</h1>
-                          <p>Tutorial Reference 1</p>
-                            <dl class="accordion">
-
-                                <dt><a href=""><u>Download & Install</u></a></dt>
-                              <dd>So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.</dd>
-
-                                <dt><a href=""><u>First Steps</u></a></dt>
-                              <dd>So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.</dd>
-
-                                <dt><a href=""><u>Advanced</u></a></dt>
-                              <dd>So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.So this is how it starts.</dd>
-
-                            </dl>
+                          <h1>OpenSCADpm</h1>                            
+                          <p>The Documentation of OpenSCADpm currently consists of the three documents below.</p>
+                            <a href="https://github.com/skp2140/openSCADpm/wiki/Project-Overview"><u>The Project Overview</u></a> </br>
+                      <a href="https://github.com/skp2140/openSCADpm/wiki/How-and-Why"><u>How and Why OpenSCADpm Works</u></a> </br>
+             <a href="https://github.com/skp2140/openSCADpm/wiki/Tutorial"><u>A User Tutorial</u></a> </br>
                         </article> 
                  </div>
                </div>
