Download only downloads the script rather than the zip folder

--- a/pages/OpenSCADpm.html
+++ b/pages/OpenSCADpm.html
@@ -57,7 +57,7 @@
                   </div>
                    </br></br>
                   <div class="hero-text align-center">
-                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
+                      <p><b><u><a href="https://skp2140.github.io/openSCADpm/ospm.sh">DOWNLOAD OpenSCADpm</a></u></b></p>
                   </div>
                   <div class="container2">
 
