--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   </form>
                   </br></br></br>
                   <div class="hero-text align-center">
-                      <p><b><u><a href="https://github.com/skp2140/openSCADpm/archive/master.zip">DOWNLOAD OpenSCADpm</a></u></b></p>
+                      <p><b><u><a href="https://skp2140.github.io/openSCADpm/ospm.sh">DOWNLOAD OpenSCADpm</a></u></b></p>
                   </div>
                </div>
             </div>
