--- a/pages/OpenSCADpm.html
+++ b/pages/OpenSCADpm.html
@@ -57,7 +57,7 @@
                   </div>
                    </br></br>
                   <div class="hero-text align-center">
-                      <p><b><a href="https://skp2140.github.io/openSCADpm/ospm.sh">DOWNLOAD OpenSCADpm</a></b></p>
+                      <p><b><a href="https://skp2140.github.io/openSCADpm/ospm">DOWNLOAD OpenSCADpm</a></b></p>
                   </div>
                   <div class="container2">
 
@@ -69,7 +69,7 @@
                           <h1>OpenSCAD</h1>
                           <p>OpenSCAD is a software for creating solid 3D CAD models. It is free software and available for Linux/UNIX, Windows and Mac OS X. Unlike most free software for creating 3D models (such as Blender) it does not focus on the artistic aspects of 3D modelling but instead on the CAD aspects. Thus it might be the application you are looking for when you are planning to create 3D models of machine parts but pretty sure is not what you are looking for when you are more interested in creating computer-animated movies.</p>
                           <p>OpenSCAD is not an interactive modeller. Instead it is something like a 3D-compiler that reads in a script file that describes the object and renders the 3D model from this script file. This gives you (the designer) full control over the modelling process and enables you to easily change any step in the modelling process or make designs that are defined by configurable parameters.</p>
-                            
+
                           <h1>OpenSCADpm</h1>
                           <p>OpenSCADpm is a package manager for OpenSCAD, akin to Node Package Manager (NPM) or Ruby Gems, and hence allows developers to more easily share and install modules. In sum, OpenSCADpm manages packages and their associated dependencies.</p>
                           <p>
@@ -77,7 +77,7 @@
                             The package manager currently constitutes a command line tool and a website. The command line tool is utilized for the installation and managing of modules by allowing users to use terminal commands. The website serves as a way for packages to be browsed and explained with a high level description.
                         </p>
                         </article>
- 
+
                  </div>
 
                </div>
@@ -145,4 +145,3 @@
       <script src="../js/functions.js"></script>
    </body>
 </html>
-
