--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   </form>
                    </br></br></br></br>
                   <form id="catSearch" class="destinations-form">
-                      
+
                      <div class="input-line">
                         <input type="text" name="destination" value="" id="search2" class="form-input check-value" placeholder="WHAT IS THE PACKAGE CATEGORY?" />
                         <button type="button" id="hit2" name="packagetype-submit" class="form-submit btn btn-special">Find</button>
@@ -76,7 +76,7 @@
                       <p><b><a href="https://github.com/search?utf8=%E2%9C%93&q=topic%3Aopenscad-pm&type=Repositories">View all Packages</a></b></p>
                   </div>
                   <div class="hero-text align-center">
-                      <p><b><a href="https://skp2140.github.io/openSCADpm/ospm.sh">DOWNLOAD OpenSCADpm</a></b></p>
+                      <p><b><a href="https://skp2140.github.io/openSCADpm/ospm">DOWNLOAD OpenSCADpm</a></b></p>
                   </div>
                </div>
             </div>
